--- a/src/main/webapp/html/bookList.html
+++ b/src/main/webapp/html/bookList.html
@@ -2,9 +2,18 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>書籍一覧</title>
 </head>
 <body>
-
+  <body>
+	<div class="main">
+		<div id="bookList">
+			<p>書籍一覧</p>
+			<div id="book"></div>
+			<div id="insertBlock"></div>
+		</div>
+	</div>
+	<script src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/bookList.js"></script>
 </body>
 </html>
