--- a/src/main/webapp/html/myPage.html
+++ b/src/main/webapp/html/myPage.html
@@ -2,9 +2,15 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+
+<title>マイページ</title>
+
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/myPage.js"></script>
 </head>
 <body>
+	<div id="table">aaa</div>
+
 
 </body>
 </html>
