--- a/src/main/webapp/html/bookList.html
+++ b/src/main/webapp/html/bookList.html
@@ -13,7 +13,7 @@
 			<div id="insertBlock"></div>
 		</div>
 	</div>
-	<script src="js/jquery-3.3.1.min.js"></script>
-	<script src="js/bookList.js"></script>
+	<script src="../js/jquery-3.3.1.min.js"></script>
+	<script src="../js/bookList.js"></script>
 </body>
 </html>
