--- a/src/main/webapp/html/lendingBookList.html
+++ b/src/main/webapp/html/lendingBookList.html
@@ -10,6 +10,7 @@
 			<div id="list">
 				<h1>貸出中書籍一覧</h1>
 				<div id="lendingBooks"></div>
+				<div id="insertBlock"></div>
 			</div>
 		</div>
 
@@ -23,7 +24,7 @@
 		</div>
 
 		<script src="js/jquery-3.3.1.min.js"></script>
-		<script src="js/post.js"></script>
+		<script src="js/lendingBookList.js"></script>
 
 	</body>
 </html>
