--- a/src/main/webapp/html/lendingBookList.html
+++ b/src/main/webapp/html/lendingBookList.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
-	<head>
-		<meta charset="UTF-8">
-		<title>貸出中書籍一覧</title>
-		<link rel="stylesheet" href="css/postStyle.css">
-	</head>
-	<body>
-		<div class="main clearfix">
-			<div id="list">
-				<h1>貸出中書籍一覧</h1>
-				<div id="lendingBooks"></div>
-				<div id="insertBlock"></div>
-			</div>
-		</div>
+<head>
+<meta charset="UTF-8">
 
-		<div>
+<title>貸出中書籍一覧</title>
+<!--<link rel="stylesheet" href="css/postStyle.css">-->
+</head>
+<body>
+	<div class="main clearfix">
+		<div id="list">
+			<h1>貸出中書籍一覧</h1>
+			<div id="lendingBookList"></div>
+			<div id="insertBlock"></div>
+		</div>
+	</div>
+
+	<div>
 		<button id="previousPage">前のページへ</button>
 		<button id="followingPage">次のページへ</button>
-		</div>
+	</div>
 
-		<div>
+	<div>
 		<button id="returnManageTopPage">戻る</button>
-		</div>
+	</div>
 
-		<script src="js/jquery-3.3.1.min.js"></script>
-		<script src="js/lendingBookList.js"></script>
+	<!--..はファイルの移動-->
+	<script src="../js/jquery-3.3.1.min.js"></script>
+	<script src="../js/lendingBookList.js"></script>
 
-	</body>
+
+</body>
 </html>
