--- a/src/main/webapp/html/managementTop.html
+++ b/src/main/webapp/html/managementTop.html
@@ -21,8 +21,8 @@
 		</div>
 	</div>
 
-	<script src="..js/jquery-3.3.1.min.js"></script>
-	<script src="..js/managementTop.js"></script>
+	<script src="../js/jquery-3.3.1.min.js"></script>
+	<script src="../js/managementTop.js"></script>
 
 
 </body>
