add book in progress

--- a/src/main/webapp/html/lendingBookList.html
+++ b/src/main/webapp/html/lendingBookList.html
@@ -10,7 +10,8 @@
 	<div class="main clearfix">
 		<div id="list">
 			<h1>貸出中書籍一覧</h1>
-			<div id="lendingBookList"></div>
+			<div id="lendingBookNumber"></div>
+			<div class="list" id="lendingBookList"></div>
 			<div id="insertBlock"></div>
 		</div>
 	</div>
