--- a/src/main/webapp/html/bookList.html
+++ b/src/main/webapp/html/bookList.html
@@ -29,11 +29,14 @@
 				</div>
 				<button id="findBook">検索</button>
 			</form>
+			<table>
 		<div id="bookList">
 			<p>書籍一覧</p>
 			<div id="book"></div>
 			<div id="insertBlock"></div>
 		</div>
+		</table>
+		<span id="prev">前へ</span> <span id="page"></span> <span id="next">次へ</span>
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/bookList.js"></script>
