--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -14,7 +14,6 @@
 		<h1>ログイン</h1>
 	</div>
 	<div>
-		<form id="loginForm" enctype="multipart/form-data">
 			<div class="error"></div>
 			<div>
 				<label for="mailAdress">メールアドレス:</label> <input type="text"
@@ -22,14 +21,13 @@
 					name="mailAdress"></input>
 			</div>
 			<div>
-				<label for="password">パスワード:</label> <input type="password"
+				<label for="password">パスワード:</label> <input type="text"
 					placeholder="パスワード" id="password" class="password" name="password"></input>
 			</div>
 			<div>
 				<button id="general-login-button" class="general-login-button">一般ログイン</button>
 				<button id="manager-login-button" class="manager-login-button">管理者ログイン</button>
 			</div>
-		</form>
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/login.js"></script>
