--- a/src/main/webapp/html/createBook.html
+++ b/src/main/webapp/html/createBook.html
@@ -3,15 +3,23 @@
 <head>
 <meta charset="UTF-8">
 <title>書籍追加登録</title>
-<link rel="stylesheet" href="css/postStyle.css">
+
+<!--<link rel="stylesheet" href="css/postStyle.css">-->
+
 </head>
 <body>
 	<div class="main clearfix">
 		<div id="createBook">
 			<h1>書籍追加登録</h1>
-			<font color="red">全ての項目を必ず入力してください。</font>
-			<form id="createBookForm">
+			<font color="red">IDを除く全ての項目を必ず入力してください。</font>
+			<form id="createBookForm" enctype="multipart/form-data">
 				<div class="error"></div>
+
+				<div>
+					<label for="id">ID：</label>
+					<input type="text" name="id" id="id" disabled>
+				</div>
+
 				<div>
 					<label for="bookTitle">タイトル：</label> <input type="text"
 						style="width: 40%" maxlength="256" id="bookTitle"
@@ -31,6 +39,12 @@
 				</div>
 
 				<div>
+					<label for="genre">ジャンル：</label> <input type="text"
+						style="width: 20%" maxlength="256" id="genre"
+						placeholder="例：プログラミング" required>
+				</div>
+
+				<!--<div>
 					<label for="genre">ジャンル：</label> <select name="genre" id="genre">
 						<option value="" selected>ジャンル</option>
 						<option value="経済">経済</option>
@@ -49,7 +63,7 @@
 				<div>
 					<input type="text" maxlength="256" id="newGenre" placeholder="例：パン"
 						required>
-				</div>
+				</div>-->
 
 				<div>
 					<label for="puchaseDate">購入日：</label> <input type="text"
@@ -62,8 +76,9 @@
 						style="width: 20%" maxlength="256" id="buyer" placeholder="例：未来太郎"
 						required>
 				</div>
-
-				<button id="saveBook">登録</button>
+				<div>
+					<button id="saveBook">登録</button>
+				</div>
 			</form>
 			<button id="returnManageTopPage">戻る</button>
 		</div>
