adress to address

--- a/src/main/webapp/html/createUser.html
+++ b/src/main/webapp/html/createUser.html
@@ -17,9 +17,9 @@
 		<form id="employeeForm" enctype="multipart/form-data">
 				<div class="error"></div>
 				<div>
-					<label for="mailAdress">メールアドレス</label> <input type="text"
-						placeholder="" id="mailAdress" class="mailAdress"
-						name="mailAdress"></input>
+					<label for="mailAddress">メールアドレス</label> <input type="text"
+						placeholder="" id="mailAddress" class="mailAddress"
+						name="mailAddress"></input>
 				</div>
 				<div>
 					<label for="employeeName">氏名</label> <input type="text"
