--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -16,9 +16,9 @@
 	<div>
 			<div class="error"></div>
 			<div>
-				<label for="mailAdress">メールアドレス:</label> <input type="text"
-					placeholder="メールアドレス" id="mailAdress" class="mailAdress"
-					name="mailAdress"></input>
+				<label for="mailAddress">メールアドレス:</label> <input type="text"
+					placeholder="メールアドレス" id="mailAddress" class="mailAddress"
+					name="mailAddress"></input>
 			</div>
 			<div>
 				<label for="password">パスワード:</label> <input type="text"
