BookDetail in progress-1

--- a/src/main/webapp/html/bookDetail.html
+++ b/src/main/webapp/html/bookDetail.html
@@ -12,185 +12,66 @@
 		<div id="bookDetail">
 			<h1>書籍詳細</h1>
 
-			<form id="bookForm" enctype="multipart/form-data">
+			<form id="bookDetail" enctype="multipart/form-data">
 				<div class="error"></div>
 				<div>
-					<label for="id">ID:</label> <input type="text" name="id" id="id"
+					<label for="id">ID：</label> <input type="text" name="id" id="id"
 						disabled>
 				</div>
 				<div>
-					<label for="empId">社員ID:</label> <input type="text" maxlength="10"
-						name="empId" id="empId">
+					<label for="title">タイトル：</label> <input type="text" maxlength="100"
+						name="title" id="title">
 				</div>
 				<div>
-					<label for="name">氏名:</label> <input type="text" maxlength="40"
-						name="name" id="name">
+					<label for="author">作者：</label> <input type="text" maxlength="40"
+						name="author" id="author">
 				</div>
 				<div>
-					<label for="age">年齢:</label> <input type="text" name="age" id="age">
+					<label for="publisher">出版社：</label> <input type="text"
+						name="publisher" id="publisher">
 				</div>
+
 				<div>
-					性別: <label><input type="radio" name="gender" value="MAN">男性</label>
-					<label><input type="radio" name="gender" value="WOMAN">女性</label>
+					<label for="genre">ジャンル：</label> <input type="text"
+						style="width: 20%" maxlength="256" id="genre" name="genre">
 				</div>
+
 				<div>
-					写真:
-					<div id="currentPhoto"></div>
-					<label><input type="file" name="photo" size="50"></label> <input
-						type="hidden" name="photoId" id="photoId" value="0">
+					<label for="puchaseDate">購入日：</label> <input type="text"
+						style="width: 20%" maxlength="256" id="puchaseDate"
+						name="purchaseDate">
 				</div>
+
 				<div>
-					<label for="zip">郵便番号:</label> <input type="text" maxlength="10"
-						name="zip" id="zip">
+					<label for="buyer">購入者：</label> <input type="text"
+						style="width: 20%" maxlength="256" id="buyer" name="buyer">
 				</div>
+
 				<div>
-					<label for="pref">都道府県:</label> <select name="pref" id="pref">
-						<option value="" selected>都道府県</option>
-						<option value="北海道">北海道</option>
-						<option value="青森県">青森県</option>
-						<option value="岩手県">岩手県</option>
-						<option value="宮城県">宮城県</option>
-						<option value="秋田県">秋田県</option>
-						<option value="山形県">山形県</option>
-						<option value="福島県">福島県</option>
-						<option value="茨城県">茨城県</option>
-						<option value="栃木県">栃木県</option>
-						<option value="群馬県">群馬県</option>
-						<option value="埼玉県">埼玉県</option>
-						<option value="千葉県">千葉県</option>
-						<option value="東京都">東京都</option>
-						<option value="神奈川県">神奈川県</option>
-						<option value="新潟県">新潟県</option>
-						<option value="富山県">富山県</option>
-						<option value="石川県">石川県</option>
-						<option value="福井県">福井県</option>
-						<option value="山梨県">山梨県</option>
-						<option value="長野県">長野県</option>
-						<option value="岐阜県">岐阜県</option>
-						<option value="静岡県">静岡県</option>
-						<option value="愛知県">愛知県</option>
-						<option value="三重県">三重県</option>
-						<option value="滋賀県">滋賀県</option>
-						<option value="京都府">京都府</option>
-						<option value="大阪府">大阪府</option>
-						<option value="兵庫県">兵庫県</option>
-						<option value="奈良県">奈良県</option>
-						<option value="和歌山県">和歌山県</option>
-						<option value="鳥取県">鳥取県</option>
-						<option value="島根県">島根県</option>
-						<option value="岡山県">岡山県</option>
-						<option value="広島県">広島県</option>
-						<option value="山口県">山口県</option>
-						<option value="徳島県">徳島県</option>
-						<option value="香川県">香川県</option>
-						<option value="愛媛県">愛媛県</option>
-						<option value="高知県">高知県</option>
-						<option value="福岡県">福岡県</option>
-						<option value="佐賀県">佐賀県</option>
-						<option value="長崎県">長崎県</option>
-						<option value="熊本県">熊本県</option>
-						<option value="大分県">大分県</option>
-						<option value="宮崎県">宮崎県</option>
-						<option value="鹿児島県">鹿児島県</option>
-						<option value="沖縄県">沖縄県</option>
-					</select>
+					<label for="borrower">借り手：</label> <input type="text"
+						style="width: 20%" maxlength="256" id="borrower" name="borrower">
 				</div>
+
 				<div>
-					<label for="address">住所:</label> <input type="text" maxlength="100"
-						name="address" id="address">
+					<label for="borrowerMailaddress">借り手のメールアドレス：</label> <input
+						type="text" style="width: 20%" maxlength="256"
+						id="borrowerMailaddress" name="borrowerMailaddress">
 				</div>
+
 				<div>
-					<label for="postId">所属:</label> <select name="postId" id="postId">
-					</select>
-				</div>
-				<div>
-					<label for="enterDate">入社日:</label> <input type="text"
-						name="enterDate" id="enterDate" placeholder="2019-4-1">
-				</div>
-				<div>
-					<label for="retireDate">退社日:</label> <input type="text"
-						name="retireDate" id="retireDate" placeholder="2019-4-1">
-				</div>
-				<div>
-					<button id="saveEmployee">保存</button>
+					<label for="returnDate">返却予定日：</label> <input type="text"
+						style="width: 20%" maxlength="256" id="returnDate"
+						name="returnDate">
 				</div>
 			</form>
 		</div>
-		<form id="createBookForm" enctype="multipart/form-data">
-			<div class="error"></div>
-
-			<div>
-				<label for="id">ID：</label> <input type="text" name="id" id="id"
-					disabled>
-			</div>
-
-			<div>
-				<label for="bookTitle">タイトル：</label> <input type="text"
-					style="width: 40%" maxlength="256" id="bookTitle" name="title"
-					placeholder="例：Javaで学ぶシミュレーションの基礎" required>
-			</div>
-
-			<div>
-				<label for="author">作者：</label> <input type="text"
-					style="width: 20%" maxlength="256" id="author" name="author"
-					placeholder="例：峯村吉泰" required>
-			</div>
-
-			<div>
-				<label for="publisher">出版社：</label> <input type="text"
-					style="width: 20%" maxlength="256" id="publisher" name="publisher"
-					placeholder="例：森北出版" required>
-			</div>
-
-			<div>
-				<label for="genre">ジャンル：</label> <input type="text"
-					style="width: 20%" maxlength="256" id="genre" name="genre"
-					placeholder="例：プログラミング" required>
-			</div>
-
-			<!--<div>
-					<label for="genre">ジャンル：</label> <select name="genre" id="genre">
-						<option value="" selected>ジャンル</option>
-						<option value="経済">経済</option>
-						<option value="ソフトウェア/ハードウェア">ソフトウェア/ハードウェア</option>
-						<option value="デザイン">デザイン</option>
-						<option value="プログラミング">プログラミング</option>
-						<option value="マネジメント">マネジメント</option>
-						<option value="リーダーシップ">リーダーシップ</option>
-						<option value="AI">AI</option>
-						<option value="IoT">IoT</option>
-						<option value="IT">IT</option>
-						<option value="（新規作成）">（新規作成）</option>
-					</select>
-				</div>
-
-				<div>
-					<input type="text" maxlength="256" id="newGenre" placeholder="例：パン"
-						required>
-				</div>-->
-
-			<div>
-				<label for="puchaseDate">購入日：</label> <input type="text"
-					style="width: 20%" maxlength="256" id="puchaseDate"
-					name="purchaseDate" placeholder="例：20170427（数字8桁で入力）" required>
-			</div>
-
-			<div>
-				<label for="buyer">購入者：</label> <input type="text"
-					style="width: 20%" maxlength="256" id="buyer" name="buyer"
-					placeholder="例：未来太郎" required>
-			</div>
-			<div>
-				<button id="saveBook">登録</button>
-			</div>
-		</form>
-		<button id="returnManageTopPage">戻る</button>
-	</div>
+		<!-- 戻るとき、戻る先がログインしてるかしてないかで異なるので後で考える -->
+		<button id="returnPage">戻る</button>
 	</div>
 
 	<!--..はファイルの移動-->
 	<script src="../js/jquery-3.3.1.min.js"></script>
-	<script src="../js/createBook.js"></script>
+	<script src="../js/bookDetail.js"></script>
 
 </body>
 </html>
