--- a/src/main/webapp/html/myPage.html
+++ b/src/main/webapp/html/myPage.html
@@ -14,9 +14,7 @@
 	</div>
 	<!--  メインコンテンツ -->
 	<div class="content">
-			<input type="text"  placeholder="ユーザーID" id="login-id" class="login-id"></input>
-			<input type="text"  placeholder="パスワード" id="login-pass" class="login-pass"></input>
-	<div id="table">aaaa</div>
+	<div id="table"></div>
 		<button id="login-button" class="login-button">すべて返却</button>
 	</div>
 	<script src="../js/myPage.js"></script>
