logout not confirmed

--- a/src/main/webapp/html/createUser.html
+++ b/src/main/webapp/html/createUser.html
@@ -19,7 +19,7 @@
 				<div>
 					<label for="mailAddress">メールアドレス</label> <input type="text"
 						placeholder="" id="mailAddress" class="mailAddress"
-						name="mailAddress"></input>
+						name="mailAddress" maxlength = "100"></input>
 				</div>
 				<div>
 					<label for="employeeName">氏名</label> <input type="text"
@@ -29,11 +29,11 @@
 				</div>
 				<div>
 					<label for="password">パスワード</label> <input type="password"
-						placeholder="" id="password" class="password" name="password"></input>
+						placeholder="" id="password" class="password" name="password" maxlength = "10"></input>
 				</div>
 				<div>
 					<label for="password2">パスワード再入力</label> <input type="password"
-						placeholder="" id="password2" class="password2" name="password2"></input>
+						placeholder="" id="password2" class="password2" name="password2" maxlength = "10"></input>
 				</div>
 				<div>
 					<button id="createUser-login-button"
