--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -18,15 +18,16 @@
 			<div>
 				<label for="mailAddress">メールアドレス:</label> <input type="text"
 					placeholder="メールアドレス" id="mailAddress" class="mailAddress"
-					name="mailAddress"></input>
+					name="mailAddress" maxlength = "100"></input>
 			</div>
 			<div>
 				<label for="password">パスワード:</label> <input type="text"
-					placeholder="パスワード" id="password" class="password" name="password"></input>
+					placeholder="パスワード" id="password" class="password" name="password" maxlength = "10"></input>
 			</div>
 			<div>
 				<button id="general-login-button" class="general-login-button">一般ログイン</button>
 				<button id="manager-login-button" class="manager-login-button">管理者ログイン</button>
+				<button id="logout-button" class="logout-button">ログアウト</button>
 			</div>
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
