--- a/src/main/webapp/html/myPage.html
+++ b/src/main/webapp/html/myPage.html
@@ -3,12 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <script src="../js/jquery-3.3.1.min.js"></script>
+
 <title>マイページ</title>
 </head>
 <body>
 
 
 <!--  header -->
+	<div id="buttonList"></div>
 	<div class="header">
 		<h1>マイページ</h1>
 	</div>
@@ -17,6 +19,7 @@
 	<div id="table"></div>
 		<button id="login-button" class="login-button">すべて返却</button>
 	</div>
+	<script src="../js/buttonList.js"></script>
 	<script src="../js/myPage.js"></script>
 </body>
 </html>
