--- a/src/main/webapp/html/myPage.html
+++ b/src/main/webapp/html/myPage.html
@@ -9,6 +9,7 @@
 
 
 <!--  header -->
+	<div id="buttonList"></div>
 	<div class="header">
 		<h1>マイページ</h1>
 	</div>
@@ -17,6 +18,7 @@
 	<div id="table"></div>
 		<button id="login-button" class="login-button">すべて返却</button>
 	</div>
+	<script src="../js/buttonList.js"></script>
 	<script src="../js/myPage.js"></script>
 </body>
 </html>
