--- a/src/main/webapp/html/lendingBookList.html
+++ b/src/main/webapp/html/lendingBookList.html
@@ -10,6 +10,7 @@
 	<div class="main clearfix">
 		<div id="list">
 			<h1>貸出中書籍一覧</h1>
+			<h2 class="red">貸出超過中の場合は、返却予定日が赤字で表示されています</h2>
 			<div id="lendingBookNumber"></div>
 			<div class="list" id="lendingBookList"></div>
 			<div id="insertBlock"></div>
