--- a/src/main/webapp/html/bookList.html
+++ b/src/main/webapp/html/bookList.html
@@ -10,7 +10,7 @@
 	<div id="login"></div>
 	<div class="table">
 		<div id = "search">
-		<p id = "bookSearch">書籍検索</p>
+		<h1 id = "bookSearch">書籍検索</h1>
 		<form id="bookSelector">
 			<div>
 				<label for="titleParam">タイトル：</label> <input type="text"
@@ -38,7 +38,7 @@
 		</div>
 		<table>
 			<div id="bookList">
-				<p>書籍一覧</p>
+				<h2>書籍一覧</h2>
 				<div id="book"></div>
 				<div id="insertBlock"></div>
 			</div>
