--- a/src/main/webapp/html/bookList.html
+++ b/src/main/webapp/html/bookList.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <body>
-	<div id="login"></div>
+	<div id="buttonList"></div>
 	<div class="table">
 		<div id = "search">
 		<p id = "bookSearch">書籍検索</p>
@@ -47,6 +47,6 @@
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/bookList.js"></script>
-<script src="../js/bookList.js"></script>
+	<script src="../js/buttonList.js"></script>
 </body>
 </html>
