--- a/src/main/webapp/html/bookList.html
+++ b/src/main/webapp/html/bookList.html
@@ -37,16 +37,11 @@
 		</form>
 		</div>
 		<table>
-			<div id="bookList">
-				<p>書籍一覧</p>
-				<div id="book"></div>
-				<div id="insertBlock"></div>
-			</div>
 		</table>
 		<span id="prev">前へ</span> <span id="page"></span> <span id="next">次へ</span>
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/bookList.js"></script>
-	<script src="../js/buttonList.js"></script>
+	<script src="../js/bookList.js"></script>
 </body>
 </html>
