--- a/src/main/webapp/html/createUser.html
+++ b/src/main/webapp/html/createUser.html
@@ -14,7 +14,7 @@
 		<h1>ユーザー新規登録</h1>
 	</div>
 	<div>
-		<form id="employeeForm" enctype="multipart/form-data">
+		<form id="userForm" enctype="multipart/form-data">
 				<div class="error"></div>
 				<div>
 					<label for="mailAddress">メールアドレス</label> <input type="text"
