--- a/src/main/webapp/html/managementTop.html
+++ b/src/main/webapp/html/managementTop.html
@@ -5,6 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+<script src="../js/jquery-3.3.1.min.js"></script>
+<script src="../js/buttonList.js"></script>
 </body>
 </html>
