--- a/src/main/webapp/html/myPage.html
+++ b/src/main/webapp/html/myPage.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <script src="../js/jquery-3.3.1.min.js"></script>
-
+<link rel="stylesheet" href="../css/Design.css">
 <title>マイページ</title>
 </head>
 <body>
@@ -17,7 +17,6 @@
 	<!--  メインコンテンツ -->
 	<div class="content">
 	<div id="table"></div>
-		<button id="login-button" class="login-button">すべて返却</button>
 	</div>
 	<script src="../js/buttonList.js"></script>
 	<script src="../js/myPage.js"></script>
