--- a/src/main/webapp/html/bookDetail.html
+++ b/src/main/webapp/html/bookDetail.html
@@ -66,7 +66,7 @@
 			</form>
 		</div>
 		<!-- 戻るとき、戻る先がログインしてるかしてないかで異なるので後で考える -->
-		<button id="returnPage">戻る</button>
+		<button id="return">戻る</button>
 	</div>
 
 	<!--..はファイルの移動-->
