--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -16,21 +16,25 @@
 		<h1>ログイン</h1>
 	</div>
 	<div>
-			<div class="error"></div>
-			<div>
-				<label for="mailAddress">メールアドレス:</label> <input type="text"
-					placeholder="メールアドレス" id="mailAddress" class="mailAddress"
-					name="mailAddress" maxlength = "100"></input>
-			</div>
-			<div>
-				<label for="password">パスワード:</label> <input type="text"
-					placeholder="パスワード" id="password" class="password" name="password" maxlength = "10"></input>
-			</div>
-			<div>
-				<button id="general-login-button" class="general-login-button">一般ログイン</button>
-				<button id="manager-login-button" class="manager-login-button">管理者ログイン</button>
-				<button id="logout-button" class="logout-button">ログアウト</button>
-			</div>
+		<div class="error"></div>
+		<div>
+			<label for="mailAddress">メールアドレス:</label> <input type="text"
+				placeholder="メールアドレス" id="mailAddress" class="mailAddress"
+				name="mailAddress" maxlength="100"></input>
+		</div>
+		<div>
+			<label for="password">パスワード:</label> <input type="text"
+				placeholder="パスワード" id="password" class="password" name="password"
+				maxlength="10"></input>
+		</div>
+		<div>
+			<button id="general-login-button" class="general-login-button">一般ログイン</button>
+			<button id="manager-login-button" class="manager-login-button">管理者ログイン</button>
+		</div>
+		<div>
+			<button id="create-user-button" class="create-user-button">ユーザー新規登録</button>
+			<button id="back-to-bookList-button" class="back-to-bookList-button">戻る</button>
+		</div>
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/login.js"></script>
