--- a/src/main/webapp/html/managementTop.html
+++ b/src/main/webapp/html/managementTop.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<link rel="stylesheet" href="../css/Design.css">
 </head>
 <body>
+
 <script src="../js/jquery-3.3.1.min.js"></script>
 <script src="../js/buttonList.js"></script>
 </body>
