--- a/src/main/webapp/html/bookList.html
+++ b/src/main/webapp/html/bookList.html
@@ -47,6 +47,7 @@
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/bookList.js"></script>
+	<script src="../js/bookDetail.js"></script>
 	<script src="../js/buttonList.js"></script>
 </body>
 </html>
