--- a/src/main/webapp/html/bookDetail.html
+++ b/src/main/webapp/html/bookDetail.html
@@ -59,7 +59,7 @@
 				</div>
 
 				<div>
-					<label for="returnDate">返却予定日：</label> <input type="text"
+					<label for="returnDate">返却期限：</label> <input type="text"
 						style="width: 20%" maxlength="256" id="returnDate"
 						name="returnDate">
 				</div>
