--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -28,11 +28,11 @@
 				maxlength="10"></input>
 		</div>
 		<div>
-			<button id="general-login-button" class="general-login-button">一般ログイン</button>
+			<button id="general-login-button" class="general-login-button">ユーザログイン</button>
 			<button id="manager-login-button" class="manager-login-button">管理者ログイン</button>
 		</div>
 		<div>
-			<button id="create-user-button" class="create-user-button">ユーザー新規登録</button>
+			<button id="create-user-button" class="create-user-button">ユーザ新規登録</button>
 			<button id="back-to-bookList-button" class="back-to-bookList-button">戻る</button>
 		</div>
 	</div>
