--- a/src/main/webapp/html/managementTop.html
+++ b/src/main/webapp/html/managementTop.html
@@ -11,18 +11,22 @@
 		<div id="operationList">
 			<h3>管理者操作一覧</h3>
 			<p>
-				<button type="button" id="createBook">書籍登録</button>
+				<button type="button" id="createBook" class = "blueButton">書籍登録</button>
 				（新しく購入した書籍を登録できます）
 			</p>
 			<p>
-				<button type="button" id="lendingBookList">貸出中書籍一覧</button>
+				<button type="button" id="lendingBookList" class = "blueButton">貸出中書籍一覧</button>
 				（現在、貸出中の書籍を一覧できます）
 			</p>
 		</div>
 	</div>
+	<div>
+		<button type="button" id="bookList" class = "blueButton">書籍一覧</button>
+	</div>
 
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/managementTop.js"></script>
+	<script src="../js/buttonList.js"></script>
 
 </body>
 </html>
