--- a/src/main/webapp/html/createBook.html
+++ b/src/main/webapp/html/createBook.html
@@ -59,10 +59,10 @@
 						placeholder="例：未来太郎" required>
 				</div>
 				<div>
-					<button id="saveBook">登録</button>
+					<button id="saveBook" class="blueButton">登録</button>
 				</div>
 			</form>
-			<button id="returnManageTopPage">戻る</button>
+			<button id="returnManageTopPage" class="orangeButton">戻る</button>
 		</div>
 	</div>
 
