--- a/src/main/webapp/html/lendingBookList.html
+++ b/src/main/webapp/html/lendingBookList.html
@@ -18,12 +18,12 @@
 	</div>
 
 	<div>
-		<button id="previousPage">前のページへ</button>
-		<button id="followingPage">次のページへ</button>
+		<button id="previousPage" class="blueButton">前のページへ</button>
+		<button id="followingPage" class="blueButton">次のページへ</button>
 	</div>
 
 	<div>
-		<button id="returnManageTopPage">戻る</button>
+		<button id="returnManageTopPage" class="orangeButton">戻る</button>
 	</div>
 
 	<!--..はファイルの移動-->
