--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -28,12 +28,12 @@
 				maxlength="10"></input>
 		</div>
 		<div>
-			<button id="general-login-button" class="general-login-button">ユーザログイン</button>
-			<button id="manager-login-button" class="manager-login-button">管理者ログイン</button>
+			<button id="general-login-button" class="blueButton">ユーザログイン</button>
+			<button id="manager-login-button" class="blueButton">管理者ログイン</button>
 		</div>
 		<div>
-			<button id="create-user-button" class="create-user-button">ユーザ新規登録</button>
-			<button id="back-to-bookList-button" class="back-to-bookList-button">戻る</button>
+			<button id="create-user-button" class="blueButton">ユーザ新規登録</button>
+			<button id="back-to-bookList-button" class="orangeButton">戻る</button>
 		</div>
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
