--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -18,12 +18,12 @@
 	<div>
 		<div class="error"></div>
 		<div>
-			<label for="mailAddress">メールアドレス:</label> <input type="text"
+			<label for="mailAddress" class="leftForm">メールアドレス:</label> <input type="text"
 				placeholder="メールアドレス" id="mailAddress" class="mailAddress"
 				name="mailAddress" maxlength="100"></input>
 		</div>
 		<div>
-			<label for="password">パスワード:</label> <input type="text"
+			<label for="password" class="leftForm">パスワード:</label> <input type="text"
 				placeholder="パスワード" id="password" class="password" name="password"
 				maxlength="10"></input>
 		</div>
