--- a/src/main/webapp/html/createUser.html
+++ b/src/main/webapp/html/createUser.html
@@ -45,7 +45,7 @@
 		</form>
 	</div>
 	<div>
-		<button id="createUser-login-button" class="orangeButton">戻る</button>
+		<button id="back-to-login-button" class="orangeButton">戻る</button>
 	</div>
 	<script src="../js/jquery-3.3.1.min.js"></script>
 	<script src="../js/createUser.js"></script>
