login.html type=password

--- a/src/main/webapp/html/login.html
+++ b/src/main/webapp/html/login.html
@@ -23,7 +23,7 @@
 				name="mailAddress" maxlength="100"></input>
 		</div>
 		<div>
-			<label for="password">パスワード:</label> <input type="text"
+			<label for="password">パスワード:</label> <input type="password"
 				placeholder="パスワード" id="password" class="password" name="password"
 				maxlength="10"></input>
 		</div>
